--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,5 @@ NotEmpty.cliente.apellido= El campo apellido no puede estar vacío
 NotEmpty.cliente.email= El campo correo no puede estar vacío
 Email.cliente.email= Debes ingresar un formato de correo válido
 NotNull.cliente.createAt= El campo fecha no puede estar vacío
+
+NotEmpty.factura.descripcion= La factura debe contar con una descripción
